fix display collapse of sns

--- a/src/scss/pages/detail_news.scss
+++ b/src/scss/pages/detail_news.scss
@@ -1255,6 +1255,18 @@
       margin-top: 8px;
     }
   }
+
+  .fb-share-button {
+    width: 81px;
+  }
+
+  .twitter {
+    width: 75px;
+  }
+
+  .linkedin {
+    width: 63px;
+  }
 }
 .news_title {
   font-size: 34px;
